# Porchlight

./: CITATION.CFF  LICENSE.txt  MANIFEST.in  README.md  RunMe.bat  ToolTip.py  installer.bat  porchlight.py  pyproject.toml  requirements.txt  spectralData.py
Lessons/: PCA in coffee classification.ipynb  PCA in coffee classification_complete.ipynb  README.MD
Lessons/Data/InstantCoffee/: FTIR_Spectra_instant_coffee.csv  FTIR_Spectra_instant_coffee_labels.csv  FTIR_Spectra_instant_coffee_unlabeled.csv  readme.txt
porchlight/: __init__.py  __main__.py  porchlight.py  spectralData.py
