[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Porchlight"
version = "1.0.0"
authors = [
    {name="Jakub Konkol", email="jakub.konkol@rutgers.edu"},
    {name="George Tsilomelekis", email="g.tsilo@rutgers.edu"}
]
description = "A GUI application for preprocessing of spectra. This material is based upon work supported in part by Rutgers, The State University of New Jersey, and the National Science Foundation Award 1751683."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research"
    ]
dependencies = [
    "tk",
    "pandas",
    "spc_spectra",
    "scipy",
    "numpy",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/Jakub-Konkol/Porchlight"
"Tsilomelekis Research group" = "https://www.gtsilomelekis.com/"
"Jakub's Blog" = "https://jakubkonkol.com/"

[tool.setuptools]
packages=["porchlight"]
include-package-data = true


[tool.black]
line-length = 88
target_version = ['py36']
include = '''
^/(
    | porchlight/.*\.pyi?
    | resources/*.*
'''
exclude = '''
^/(
  (
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.idea
    | data
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''